AIOrg/force-app/main/default/objects/Fitness__c/Fitness__c.object-meta.xml
<CustomObject>
    <label>Fitness</label>
    <nameField>
        <displayFormat>Fitness Interest-{0000}</displayFormat>
        <label>Fitness</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fitness</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>