AIOrg/force-app/main/default/objects/Fitness__c/fields/activity_level__c.field-meta.xml
<CustomField>
    <fullName>activity_level__c</fullName>
    <label>Activity Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>