AIOrg/force-app/main/default/objects/Fitness__c/fields/Equipment_Owned__c.field-meta.xml
<CustomField>
    <fullName>Equipment_Owned__c</fullName>
    <label>Equipment Owned</label>
    <length>255</length>
    <type>Text</type>
</CustomField>