AIOrg/force-app/main/default/objects/Fitness__c/fields/exercise_frequency__c.field-meta.xml
<CustomField>
    <fullName>exercise_frequency__c</fullName>
    <label>Exercise Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>