AIOrg/force-app/main/default/objects/Fitness__c/fields/exercise_type__c.field-meta.xml
<CustomField>
    <fullName>exercise_type__c</fullName>
    <label>Exercise Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>