AIOrg/force-app/main/default/objects/Fitness__c/fields/favorite_exercise__c.field-meta.xml
<CustomField>
    <fullName>favorite_exercise__c</fullName>
    <label>Favorite Exercise</label>
    <length>255</length>
    <type>Text</type>
</CustomField>