AIOrg/force-app/main/default/objects/Fitness__c/fields/fitness_goal__c.field-meta.xml
<CustomField>
    <fullName>fitness_goal__c</fullName>
    <label>Fitness Goal</label>
    <length>255</length>
    <type>Text</type>
</CustomField>