AIOrg/force-app/main/default/objects/Fitness__c/fields/goal_completion_date__c.field-meta.xml
<CustomField>
    <fullName>goal_completion_date__c</fullName>
    <label>Goal Completion Timeframe</label>
    <length>255</length>
    <type>Text</type>
</CustomField>