AIOrg/force-app/main/default/objects/Fitness__c/fields/intensity_level__c.field-meta.xml
<CustomField>
    <fullName>intensity_level__c</fullName>
    <label>Intensity Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>