AIOrg/force-app/main/default/objects/Fitness__c/fields/interest_frequency__c.field-meta.xml
<CustomField>
    <fullName>interest_frequency__c</fullName>
    <label>Interest Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>