AIOrg/force-app/main/default/objects/Fitness__c/fields/interest_type__c.field-meta.xml
<CustomField>
    <fullName>interest_type__c</fullName>
    <label>Interest Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>