AIOrg/force-app/main/default/objects/Fitness__c/fields/location__c.field-meta.xml
<CustomField>
    <fullName>location__c</fullName>
    <label>location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>