AIOrg/force-app/main/default/objects/Fitness__c/fields/preferred_time__c.field-meta.xml
<CustomField>
    <fullName>preferred_time__c</fullName>
    <label>Preferred Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>