AIOrg/force-app/main/default/objects/Fitness__c/fields/sleep_hours__c.field-meta.xml
<CustomField>
    <fullName>sleep_hours__c</fullName>
    <label>Sleep Hours</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>