AIOrg/force-app/main/default/objects/Fitness__c/fields/stress_level__c.field-meta.xml
<CustomField>
    <fullName>stress_level__c</fullName>
    <label>Stress Level</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>