AIOrg/force-app/main/default/objects/Fitness__c/fields/Survey_Input__c.field-meta.xml
<CustomField>
    <fullName>Survey_Input__c</fullName>
    <inlineHelpText>Captures the survey comments provided by clients.</inlineHelpText>
    <label>Survey Input</label>
    <length>255</length>
    <type>Text</type>
</CustomField>