AIOrg/force-app/main/default/objects/Fitness__c/fields/Translated_Survey_Input__c.field-meta.xml
<CustomField>
    <fullName>Translated_Survey_Input__c</fullName>
    <description>Captures the survey comments provided by clients, translated into a specific language for managers use</description>
    <label>Translated Survey Input</label>
    <length>255</length>
    <type>Text</type>
</CustomField>