AIOrg/force-app/main/default/objects/Fitness__c/fields/water_intake__c.field-meta.xml
<CustomField>
    <fullName>water_intake__c</fullName>
    <label>Water Intake</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>